# wgpu-py-subdivision

./: README.md  _math.py  _mesh.py  _mesh_loader.py  _mesh_volume.py  _mlca.py  _renderer.py  create_prism_mesh.py  cube.py  general_mesh_demo.py  pyproject.toml  solution.md  triangle.py
cursor_wgpu_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
meshes/: box.vtk  full_cylinder.vtk  half_cylinder.vtk  hexagonal_prism.vtk  pentagonal_prism.vtk  quarter_cylinder.vtk  quarter_cylinder_large.vtk  triangular_prism.vtk
